tests/int/use_command/snapshots/integration__int__use_command__flags__modules_visibility_flags_r_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - visibility
    - "-r"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet
crate::file_module
crate::nesting
crate::nesting::level1::level2::level3
crate::visibility::InternalState
crate::visibility::demonstrate_access
crate::visibility::inner
crate::visibility::inner::uses_restricted
crate::visibility::internal_helper
crate::visibility::private_mod::deepest_greet
crate::visibility::private_mod::greet
crate::visibility::pub_crate_mod
crate::visibility::pub_crate_mod::greet
crate::visibility::pub_crate_mod::parent_greet
crate::visibility::pub_mod
crate::visibility::pub_mod::greet
crate::visibility::pub_super_mod
crate::visibility::pub_super_mod::dir_module_greet
crate::visibility::pub_super_mod::greet
crate::visibility::restricted_mod
crate::visibility::restricted_mod::RestrictedConfig
crate::visibility::restricted_mod::VERSION
crate::visibility::restricted_mod::greet
crate::visibility::restricted_mod::nesting_depth

----- stderr -----
