tests/int/use_command/snapshots/integration__int__use_command__flags__modules_visibility_flags_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - visibility
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::visibility::inner::uses_restricted
crate::visibility::private_mod::deepest_greet
crate::visibility::private_mod::greet
crate::visibility::pub_crate_mod::greet
crate::visibility::pub_crate_mod::parent_greet
crate::visibility::pub_mod::greet
crate::visibility::pub_super_mod::dir_module_greet
crate::visibility::pub_super_mod::greet
crate::visibility::restricted_mod::RestrictedConfig
crate::visibility::restricted_mod::VERSION
crate::visibility::restricted_mod::greet
crate::visibility::restricted_mod::nesting_depth

----- stderr -----
